update api for fitler message based on category
